Use new url parsing and fix npe in ip response